--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -328,7 +328,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "df = pd.read_csv(\"C:\\\\Users\\\\jossw\\\\OneDrive\\\\Desktop\\\\UBCOYR3\\\\COSC301\\\\project-group-26\\\\data\\\\raw\\\\ks-projects-201801.csv\")\n",
+    "df = pd.read_csv(\"../data/raw/ks-projects-201801.csv\")\n",
     "df\n"
    ]
   },
@@ -617,7 +617,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"C:\\\\Users\\\\jossw\\\\OneDrive\\\\Desktop\\\\UBCOYR3\\\\COSC301\\\\project-group-26\\\\data\\\\raw\\\\ks-projects-201801.csv\")\n",
+    "df = pd.read_csv(\"../data/raw/ks-projects-201801.csv\")\n",
     "\n",
     "#make a few graphs, this one is not a good example yet.\n",
     "sb.countplot(y = 'state', data=df)\n",
@@ -708,7 +708,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"C:\\\\Users\\\\jossw\\\\OneDrive\\\\Desktop\\\\UBCOYR3\\\\COSC301\\\\project-group-26\\\\data\\\\raw\\\\ks-projects-201801.csv\")\n",
+    "df = pd.read_csv(\"../data/raw/ks-projects-201801.csv\")\n",
     "dk = df.copy()\n",
     "dk['name_length'] = dk['name'].str.len()\n",
     "dk['pledged'] = dk['pledged']\n",
@@ -1236,7 +1236,7 @@
     "  \n",
     "    return df2\n",
     "\n",
-    "load_and_process(\"C:\\\\Users\\\\jossw\\\\OneDrive\\\\Desktop\\\\UBCOYR3\\\\COSC301\\\\project-group-26\\\\data\\\\raw\\\\ks-projects-201801.csv\").head()\n",
+    "load_and_process(\"../data/raw/ks-projects-201801.csv\").head()\n",
     "\n"
    ]
   },
