Added Processed Data for Tableau Vid

--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -1517,6 +1517,7 @@
     "import project_functions2 as p2\n",
     "\n",
     "df = p2.load_and_process(\"../data/raw/ks-projects-201801.csv\")\n",
+    "df.to_csv(\"../data/processed/processed_df.csv\")\n",
     "df.head()"
    ]
   },
