--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -635,6 +635,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ced0b55f-2cda-458a-9139-26536e531446",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "763c6365-a3ea-49fb-9103-a9aadea64648",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
