--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -807,15 +807,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_and_process(path):\n",
-    "    df = pd.read_csv(path)\n",
-    "    df = df[df[\"state\"] != \"undefined\"]\n",
-    "    df = df[df[\"country\"] != 'N,0\"']\n",
-    "    df = df.drop([\"usd pledged\", \"pledged\", \"goal\"], axis=1)\n",
+    "    df = (pd.read_csv(path)\n",
+    "        .drop([\"state\"] != \"undefined\")\n",
+    "        .drop([\"country\"] != 'N,0\"')\n",
+    "        .drop([\"usd pledged\", \"pledged\", \"goal\"], axis=1)\n",
+    "    )\n",
     "    return df"
    ]
   },
@@ -828,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +970,7 @@
        "4  canceled       14      US            1283.0       19500.00  "
       ]
      },
-     "execution_count": null,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,6 +1211,23 @@
    "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0b2a3fd432d35a79e0f6b247bcecfdd9117e86b5d4a9c12a0cca25806beef2ab"
+   }
   }
  },
  "nbformat": 4,
