Fixed task 4 image links

--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -635,14 +635,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced0b55f-2cda-458a-9139-26536e531446",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "763c6365-a3ea-49fb-9103-a9aadea64648",
    "metadata": {},
    "outputs": [
@@ -1543,11 +1535,11 @@
     "\n",
     "For my first questions of interest, I have 2 main visuals, the first exploring the importance of the month the project was released in.\n",
     "\n",
-    "![LaunchMonth](images/LaunchMonth)\n",
+    "![LaunchMonth](images/LaunchMonth.png)\n",
     "\n",
     "Based on my findings, it seems as though July is the most popular month to launch a project, however it is not the most succesful and has the most fails out of any month. I suspect July is the most popular as it is the summer, meaning that people usually have more time to try something such as a startup project and they will be less likely to be limited by weather. There is a much lower project count in December, and generally most are unsuccseful. I suspect that the lower project count in December comes from the fact that the weather is generally colder, and it is an expensive time for a lot of people considering it is holiday season. The most succesful month is March, I cannot see a logical reason why however it is an interesting finding nonetheless. \n",
     "\n",
-    "![Running_Time_SuccesRate](images/SuccessRateVSproj)\n",
+    "![Running_Time_SuccesRate](images/SuccessRateVSproj.png)\n",
     "\n",
     "\n",
     "The second visual plot gives a rough look into the most common times for project windows and when they are most succesful. It looks to be around the 30 day mark where there is a big spike, this is the most common project time, however more fail than succeed. Kickstarter recommends on their website to run your project for 30 days or less for most success. This is in line with the data that I discovered. Generally less than 4 weeks sees more success than failures. I predict that this is the case as projects with a shorter duration create a sense of urgency around them. If the deadline is months away for a project, it can be easy to simply forget about or ignore them as a backer. This is also in line with my findings, projects over 2 months are rare and are also generally unsuccessful.\n",
@@ -1556,15 +1548,15 @@
     "\n",
     "For my second area of interest, I have 4 main visuals, the first being a scatter plot that examines the state when looking at the length of the name compared to how much was invested. Projects with a name of more than 60 characters generally fail to recieve any funding.\n",
     "\n",
-    "![NameLenTotal](images/NameLenTotalP)\n",
-    "![NameLenAvg](images/PledgedAmt)\n",
+    "![NameLenTotal](images/NameLenTotalP.png)\n",
+    "![NameLenAvg](images/PledgedAmt.png)\n",
     "\n",
     "The sweet spot for character length of name is betwen 40-60, however with this plot it is difficult to choose a sweet spot, it generally shows how much is invested for certain lengths. The density of dots also gives an indication into the popularity of name length choice, with 30 and 60 within 5 looking like the most popular.\n",
     "\n",
     "\n",
     "My next plots examined the name lengths of succesful, unsuccesful, and both states, giving a clearer understanding of the ideal name length. Looking at the name lengths of succesful projects, many seem to be around the 60 character mark, 20-30 also seeing steady success. Anything below 10 is generally unsuccesful. Now contrasting this with the unsuccesful plot, 60 again is the most unsuccseful name length, but there is also a very large spike in the 10-20 range, which generally seems to be too short. Looking at both of these visuals, it seems that the most popular length of name is around 60 characters. Both of these visuals show that if you are picking a name under 20 characters it is more likely to be unsuccesful.\n",
     "\n",
-    "![NameLenState](images/Name_Length)\n",
+    "![NameLenState](images/Name_Length.png)\n",
     "\n",
     "Finally, the plot for both states made it easier to compare the success vs failure of certain name lengths. We can further see that the sweet spot seems to be around 40-55 charcaters (The best success to fail ratio). The worst seems to be 8-25, where there are much more fails than succesful projects.\n",
     "\n",
@@ -1573,14 +1565,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "930ecef9-3e14-495f-81ee-e288618d741d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
