Changed a hard coded path to a relative one

--- a/notebooks/analysis1.ipynb
+++ b/notebooks/analysis1.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dataset = pd.read_csv(\"C:\\\\Users\\\\condu\\\\DATA301Project\\\\project-group-26\\\\data\\\\raw\\\\ks-projects-201801.csv\")\n",
+    "dataset = pd.read_csv(\"..\\\\data\\\\raw\\\\ks-projects-201801.csv\")\n",
     "\n",
     "print(dataset.head())"
    ]
